objects/Vlocity_Loyalty_Authentication__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Loyalty Authentication</label>
    <pluralLabel>Vlocity Loyalty Authentication</pluralLabel>
</CustomObject>